Appended group not selected #50334

Closed
opened 2016-12-28 14:19:29 +01:00 by Jurgen · 9 comments

occurs since v2.78, works in 2.77

scenario:

  • file, append (shift f1)
  • select other blender file
  • select "groups"
  • select a group
  • check the "select" icon
  • click "append from library"

expected outcome: added group and its shild objects should be selected
outcome: nothing is selected

occurs since v2.78, works in 2.77 scenario: - file, append (shift f1) - select other blender file - select "groups" - select a group - check the "select" icon - click "append from library" expected outcome: added group and its shild objects should be selected outcome: nothing is selected
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JurgenH-4

Added subscriber: @JurgenH-4

Added subscriber: @mont29

Added subscriber: @mont29

I can’t confirm this here, for me both 2.77 and 2.78 show same behavior (non-selected objects from appended group). Which is consistent imho, you cannot select a group, only either its objects, or, in case you enable the 'Instance Group' option, the object instancing the group (which does happen in both 2.77 and 2.78).

I can’t confirm this here, for me both 2.77 and 2.78 show same behavior (non-selected objects from appended group). Which is consistent imho, you cannot select a group, only either its objects, or, in case you enable the 'Instance Group' option, the object instancing the group (which does happen in both 2.77 and 2.78).
Author

Thanks for your feedback. But can you reconsider?

Why would it not be possible to select a group? (all its children)
You can do exactly that by going to Groups view in the Outliner view.

I find it weird to say that the select option in the append screen would not apply to groups, if that as such is in fact possible. It is even selected by default, but its not working.

And it is in particular impractical when using the append functionality in Python scripts. You have no idea which group/objects were appended, because auto renaming occurs when appending the same group twice. (.001, etc) When these objects would be selected you can easily access them, even when they got renamed.

Thanks for your feedback. But can you reconsider? Why would it not be possible to select a group? (all its children) You can do exactly that by going to Groups view in the Outliner view. I find it weird to say that the select option in the append screen would not apply to groups, if that as such is in fact possible. It is even selected by default, but its not working. And it is in particular impractical when using the append functionality in Python scripts. You have no idea which group/objects were appended, because auto renaming occurs when appending the same group twice. (.001, etc) When these objects would be selected you can easily access them, even when they got renamed.
Bastien Montagne self-assigned this 2016-12-29 11:55:19 +01:00

OK, so not a regression from 2.77. But yes, on second thoughts I agree it makes more sense to also select group's objects in that case, will check on this.

OK, so not a regression from 2.77. But yes, on second thoughts I agree it makes more sense to also select group's objects in that case, will check on this.

This issue was referenced by 934b3f3682

This issue was referenced by 934b3f3682520727ee48eec8be01d46147f8927d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Wow, thanks for fixing this so quickly

Wow, thanks for fixing this so quickly
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50334
No description provided.