Fix T50334: Also select indirectly imported objects when linking/appending.

Since we create a base and instantiate them, they become directly
linked, so makes sense to also select them if requested.